--- a/less/RTLit.scss
+++ b/less/RTLit.scss
@@ -1,7 +1,3 @@
-$ltr: ltr;
-$rtl: rtl;
-$direction: $rtl;
-
 html {
     direction: $direction;
 }
@@ -10,51 +6,54 @@ body {
     direction: $direction;
 }
 
-@mixin FloatItem($value) {
+@mixin FloatItem($value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($value = "left") and ($direction = $ltr) {
-        float: left;
+        float: left #{$important};
     }
     @if ($value = "right") and ($direction = $ltr) {
-        float: right;
+        float: right #{$important};
     }
     @if ($value = "left") and ($direction = $rtl) {
-        float: right;
+        float: right #{$important};
     }
     @if ($value = "right") and ($direction = $rtl) {
-        float: left;
+        float: left #{$important};
     }
     @if ($value = "none") {
-        float: none;
+        float: none #{$important};
     }
 }
 
-@mixin TextAlignTo($value) {
+@mixin TextAlignTo($value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($value = "left") and ($direction = $ltr) {
-        text-align: left;
+        text-align: left #{$important};
     }
     @if ($value = "right") and ($direction = $ltr) {
-        text-align: right;
+        text-align: right #{$important};
     }
     @if ($value = "left") and ($direction = $rtl) {
-        text-align: right;
+        text-align: right #{$important};
     }
     @if ($value = "right") and ($direction = $rtl) {
-        text-align: left;
+        text-align: left #{$important};
     }
 }
 
-@mixin DockItem($location, $value) {
+@mixin DockItem($location, $value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($location = "left") and ($direction = $ltr) {
-        left: $value;
+        left: $value #{$important};
     }
     @if ($location = "right") and ($direction = $ltr) {
-        right: $value;
+        right: $value #{$important};
     }
     @if ($location = "left") and ($direction = $rtl) {
-        right: $value;
+        right: $value #{$important};
     }
     @if ($location = "right") and ($direction = $rtl) {
-        left: $value;
+        left: $value #{$important};
     }
 }
 
@@ -67,18 +66,19 @@ body {
     }
 }
 
-@mixin MarginLeftOrRight($command, $value) {
+@mixin MarginLeftOrRight($command, $value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($command = "margin-left") and ($direction = $ltr) {
-        margin-left: $value;
+        margin-left: $value #{$important};
     }
     @if ($command = "margin-right") and ($direction = $ltr) {
-        margin-right: $value;
+        margin-right: $value #{$important};
     }
     @if ($command = "margin-left") and ($direction = $rtl) {
-        margin-right: $value;
+        margin-right: $value #{$important};
     }
     @if ($command = "margin-right") and ($direction = $rtl) {
-        margin-left: $value;
+        margin-left: $value #{$important};
     }
 }
 
@@ -91,18 +91,19 @@ body {
     }
 }
 
-@mixin PaddingLeftOrRight($command, $value) {
+@mixin PaddingLeftOrRight($command, $value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($command = "padding-left") and ($direction = $ltr) {
-        padding-left: $value;
+        padding-left: $value #{$important};
     }
     @if ($command = "padding-right") and ($direction = $ltr) {
-        padding-right: $value;
+        padding-right: $value #{$important};
     }
     @if ($command = "padding-left") and ($direction = $rtl) {
-        padding-right: $value;
+        padding-right: $value #{$important};
     }
     @if ($command = "padding-right") and ($direction = $rtl) {
-        padding-left: $value;
+        padding-left: $value #{$important};
     }
 }
 
@@ -121,63 +122,67 @@ body {
     }
 }
 
-@mixin BorderLeftOrRightColor($command, $value) {
+@mixin BorderLeftOrRightColor($command, $value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($command = "border-left-color") and ($direction = $ltr) {
-        border-left-color: $value;
+        border-left-color: $value #{$important};
     }
     @if ($command = "border-left-color") and ($direction = $rtl) {
-        border-right-color: $value;
+        border-right-color: $value #{$important};
     }
     @if ($command = "border-right-color") and ($direction = $ltr) {
-        border-right-color: $value;
+        border-right-color: $value #{$important};
     }
     @if ($command = "border-right-color") and ($direction = $rtl) {
-        border-left-color: $value;
+        border-left-color: $value #{$important};
     }
 }
 
-@mixin BorderLeftOrRightWidth($command, $value) {
+@mixin BorderLeftOrRightWidth($command, $value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($command = "border-left-width") and ($direction = $ltr) {
-        border-left-width: $value;
+        border-left-width: $value #{$important};
     }
     @if ($command = "border-left-width") and ($direction = $rtl) {
-        border-right-width: $value;
+        border-right-width: $value #{$important};
     }
     @if ($command = "border-right-width") and ($direction = $ltr) {
-        border-right-width: $value;
+        border-right-width: $value #{$important};
     }
     @if ($command = "border-right-width") and ($direction = $rtl) {
-        border-left-width: $value;
+        border-left-width: $value #{$important};
     }
 }
 
-@mixin BorderTopLeftOrRightRadius($command, $value) {
+@mixin BorderTopLeftOrRightRadius($command, $value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($command = "border-top-left-radius") and ($direction = $ltr) {
-        border-top-left-radius: $value;
+        border-top-left-radius: $value #{$important};
     }
     @if ($command = "border-top-left-radius") and ($direction = $rtl) {
-        border-top-right-radius: $value;
+        border-top-right-radius: $value #{$important};
     }
     @if ($command = "border-top-right-radius") and ($direction = $ltr) {
-        border-top-right-radius: $value;
+        border-top-right-radius: $value #{$important};
     }
     @if ($command = "border-top-right-radius") and ($direction = $rtl) {
-        border-top-left-radius: $value;
+        border-top-left-radius: $value #{$important};
     }
 }
 
-@mixin BorderBottomLeftOrRightRadius($command, $value) {
+@mixin BorderBottomLeftOrRightRadius($command, $value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($command = "border-bottom-left-radius") and ($direction = $ltr) {
-        border-bottom-left-radius: $value;
+        border-bottom-left-radius: $value #{$important};
     }
     @if ($command = "border-bottom-left-radius") and ($direction = $rtl) {
-        border-bottom-right-radius: $value;
+        border-bottom-right-radius: $value #{$important};
     }
     @if ($command = "border-bottom-right-radius") and ($direction = $ltr) {
-        border-bottom-right-radius: $value;
+        border-bottom-right-radius: $value #{$important};
     }
     @if ($command = "border-bottom-right-radius") and ($direction = $rtl) {
-        border-bottom-left-radius: $value;
+        border-bottom-left-radius: $value #{$important};
     }
 }
 
@@ -190,57 +195,63 @@ body {
     }
 }
 
-@mixin BorderLeft($value) {
+@mixin BorderLeft($value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($direction = $ltr) {
-        border-left: $value;
+        border-left: $value #{$important};
     }
     @if ($direction = $rtl) {
-        border-right: $value;
+        border-right: $value #{$important};
     }
 }
 
-@mixin BorderRight($value) {
+@mixin BorderRight($value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($direction = $ltr) {
-        border-right: $value;
+        border-right: $value #{$important};
     }
     @if ($direction = $rtl) {
-        border-left: $value;
+        border-left: $value #{$important};
     }
 }
 
-@mixin BorderLeftWidth($value) {
+@mixin BorderLeftWidth($value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($direction = $ltr) {
-        border-left-width: $value;
+        border-left-width: $value #{$important};
     }
     @if ($direction = $rtl) {
-        border-right-width: $value;
+        border-right-width: $value #{$important};
     }
 }
 
-@mixin BorderRightWidth($value) {
+@mixin BorderRightWidth($value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($direction = $ltr) {
-        border-right-width: $value;
+        border-right-width: $value #{$important};
     }
     @if ($direction = $rtl) {
-        border-left-width: $value;
+        border-left-width: $value #{$important};
     }
 }
 
-@mixin BorderLeftColor($value) {
+@mixin BorderLeftColor($value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($direction = $ltr) {
-        border-left-color: $value;
+        border-left-color: $value #{$important};
     }
     @if ($direction = $rtl) {
-        border-right-color: $value;
+        border-right-color: $value #{$important};
     }
 }
 
-@mixin BorderRightColor($value) {
+@mixin BorderRightColor($value, $important: false) {
+    $important: if($important, "!important", "");
     @if ($direction = $ltr) {
-        border-right-color: $value;
+        border-right-color: $value #{$important};
     }
     @if ($direction = $rtl) {
-        border-left-color: $value;
+        border-left-color: $value #{$important};
     }
 }
 
